--- a/app/src/main/res/layout/item_cartoon_layout.xml
+++ b/app/src/main/res/layout/item_cartoon_layout.xml
@@ -42,7 +42,8 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/cartoon_cover"
             android:layout_alignBottom="@id/cartoon_cover"
-            android:background="@drawable/shape_drawable"/>
+            android:textColor="#ff6600"
+            android:background="@drawable/shape_drawable2"/>
 
     </RelativeLayout>
 </LinearLayout>
