--- a/app/src/main/res/layout/item_grid_layout.xml
+++ b/app/src/main/res/layout/item_grid_layout.xml
@@ -18,4 +18,10 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/grid_history"
+        android:layout_margin="2dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
