--- a/app/src/main/res/layout/fragment_item_collection.xml
+++ b/app/src/main/res/layout/fragment_item_collection.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/collection_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/collection"/>
+    <TextView
+        android:id="@+id/collection_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/collection_image"
+        android:textSize="20dp"
+        android:text="你还没有收藏任何漫画哦！"/>
     <GridView
         android:id="@+id/grid_view"
         android:gravity="center"
         android:numColumns="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+</RelativeLayout>
