--- a/app/src/main/res/layout/item_cartoon_layout.xml
+++ b/app/src/main/res/layout/item_cartoon_layout.xml
@@ -1,49 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp">
-        <ImageView
-            android:id="@+id/cartoon_cover"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"/>
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/cartoon_cover"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/cartoon_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_toRightOf="@id/cartoon_cover"
             android:layout_alignParentTop="true"
-            android:layout_margin="2dp"/>
+            android:layout_margin="5dp"/>
         <TextView
             android:id="@+id/cartoon_tags"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_toRightOf="@id/cartoon_cover"
             android:layout_below="@id/cartoon_name"
-            android:layout_margin="2dp"
+            android:layout_margin="5dp"
             android:background="@drawable/shape_drawable"/>
         <TextView
             android:id="@+id/cartoon_description"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:layout_toRightOf="@id/cartoon_cover"
             android:layout_below="@id/cartoon_tags"
             android:textColor="#999999"
             android:maxLines="2"
             android:ellipsize="end"
-            android:layout_margin="2dp"/>
+            android:layout_margin="5dp"/>
         <Button
             android:id="@+id/cartoon_collection"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:layout_toRightOf="@id/cartoon_cover"
             android:layout_alignBottom="@id/cartoon_cover"
             android:textColor="#ff6600"
-            android:background="@drawable/shape_drawable2"/>
-
-    </RelativeLayout>
+            android:background="@drawable/shape_drawable2"
+            android:layout_margin="5dp"/>
+    </LinearLayout>
 </LinearLayout>
