--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,12 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:layout_margin="5dp"
-        android:text="漫画搜索"/>
+        android:background="@color/colorAccent"
+        android:textColor="@android:color/white"
+        android:fontFamily="sans-serif-medium"
+        android:text="  漫画搜索"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
         <EditText
             android:id="@+id/search_edit"
