--- a/app/src/main/res/layout/item_grid_layout.xml
+++ b/app/src/main/res/layout/item_grid_layout.xml
@@ -18,10 +18,10 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/grid_history"
-        android:layout_margin="2dp"
-        android:gravity="center"
-        android:layout_width="match_parent"
+    <CheckBox
+        android:id="@+id/grid_delete"
+        android:layout_marginBottom="2dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
